Validação nos campos

--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -556,7 +556,7 @@
                                         </div>
                                         <div class="row divider-top">
                                             <div class="col-sm-12">
-                                                <div class="form-group">
+                                                <fieldset class="form-group">
                                                     <label class="form-label semibold" for="">Grupo(s)
                                                         <span class="semibold text-danger h4">*</span></label>
                                                     <select class="select2" multiple="multiple" id="cursogrupo" name="cursogrupo">
@@ -566,7 +566,7 @@
                                                         <option value="3">Cursos online</option>
                                                         <option value="4">Cursos especiais</option>
                                                     </select>
-                                                </div>
+                                                </fieldset>
                                             </div>
                                         </div>
                                         <div class="row divider-top">
