--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -471,7 +471,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="row mb-lg">
+                                        <div class="row">
                                             <div class="col-sm-12">
                                                 <fieldset class="form-group">
                                                     <label class="form-label semibold" for="">Descrição<span class="semibold text-danger h4">*</span></label>
@@ -482,7 +482,7 @@
                                                 </fieldset>
                                             </div>
                                         </div>
-                                        <div class="row divider-top pb-md">
+                                        <div class="row divider-top">
                                             <div class="col-sm-12">
                                                 <button type="submit" class="btn btn-primary btn-success">
                                                     <i class="fa fa-floppy-o mr-xs" aria-hidden="true"></i> Salvar
