Reajuste nos js

--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -575,7 +575,7 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <label class="form-label semibold" for="">Carga horária</label>
-                                                <input type="text" class="form-control" id="" placeholder="Carga horária" id="cargahoraria">
+                                                <input type="text" class="form-control" id="cargahoraria" placeholder="Carga horária">
                                             </div>
                                             <div class="col-sm-4">
                                                 <label class="form-label semibold" for="">Público-alvo</label>
